src/test/ui/coherence/coherence-projection-ok.stderr
error: compilation successful
  --> $DIR/coherence-projection-ok.rs:18:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

